# points-v2

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.mavis/plans/: plan.yaml
config/: default.yaml  development.yaml  production.yaml
docs/: ARCHITECTURE.md
outputs/final-integration/: deliverable.md
reports/: final_integration_report.md
sample/v59/: README.md  marks.json  points_history.json
scripts/: api.spec  e2e_smoke.py  main.spec  run_dev.py  seed_data.py
src/points_v2/: __init__.py  __main__.py
src/points_v2/api/: __init__.py  app.py  app_state.py  deps.py  schemas.py
src/points_v2/api/routers/: __init__.py  admin.py  auth.py  points.py  users.py
src/points_v2/core/: __init__.py  config.py  container.py  exceptions.py  logging.py  paths.py
src/points_v2/data/: __init__.py  audit_repo.py  base.py  notification_repo.py  points_repo.py  user_repo.py
src/points_v2/domain/: __init__.py  audit.py  enums.py  notification.py  points.py  user.py
src/points_v2/migrations/: __init__.py  from_v5_9.py
src/points_v2/plugins/: __init__.py  base.py  loader.py
src/points_v2/plugins/builtin/: __init__.py  example.py
src/points_v2/services/: __init__.py  audit_service.py  auth_service.py  notification_service.py  points_service.py  user_service.py
src/points_v2/ui/: __init__.py  app.py  main_window.py  workers.py
src/points_v2/ui/views/: __init__.py  admin_view.py  dashboard_view.py  login_view.py  points_view.py  user_view.py
src/points_v2/ui/widgets/: __init__.py  chart_widget.py  data_table.py  error_dialog.py
src/points_v2/utils/: __init__.py  hashing.py  time.py  validators.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/api/: __init__.py  test_endpoints.py
tests/core/: test_config.py  test_container.py  test_exceptions.py  test_logging.py  test_setup.py
tests/data/: test_base_repo.py  test_repos_extra.py  test_user_repo.py
tests/domain/: __init__.py  test_points.py  test_user.py
tests/migrations/: test_from_v5_9.py
tests/services/: __init__.py  test_auth_service.py  test_points_service.py  test_user_audit_notification.py
tests/ui/: __init__.py  test_smoke.py
