[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "points-v2"
version = "0.1.0"
description = "智能回收社 积分系统 v2 — PySide6 desktop + FastAPI HTTP API"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "智能回收社项目组", email = "noreply@example.com" },
]
keywords = ["points", "recycle", "pyside6", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Education",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "loguru>=0.7",
    "PyYAML>=6.0",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "httpx>=0.27",
]
gui = [
    "PySide6>=6.6",
    "matplotlib>=3.8",
]
packaging = [
    "PyInstaller>=6.0",
]

[project.scripts]
points-v2 = "points_v2.__main__:main"
points-v2-api = "points_v2.api:main"
points-v2-migrate = "points_v2.migrations.from_v5_9:main"

[project.entry-points."points_v2.plugins"]
example = "points_v2.plugins.builtin:ExamplePlugin"

[project.urls]
Homepage = "https://github.com/xiaomi/points-v2"
Documentation = "https://github.com/xiaomi/points-v2/blob/master/docs/ARCHITECTURE.md"
Issues = "https://github.com/xiaomi/points-v2/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
points_v2 = ["py.typed"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line-too-long (handled by formatter)
    "B008", # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # asserts are fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["PySide6.*", "loguru"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "gui: 需要 PySide6（CI 跳过；本地 pip install -e '.[gui]' 后跑）",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources.*",
]
pythonpath = ["src"]
